--- a/zen-arkworks_mpc/Cargo.toml
+++ b/zen-arkworks_mpc/Cargo.toml
@@ -32,7 +32,7 @@ rand_xorshift = { version = "0.2" }
 
 ark-ff = { path = "../algebra/ff", version = "0.2.0", default-features = false, features = [ "asm" ] }
 ark-bls12-377 = { path = "../curves/bls12_377", version = "0.2.0", default-features = false, features = ["curve"] }
-ark-bls12-381 = { version = "0.2.0", features = ["curve"] }
+ark-bls12-381 = { path = "../curves/bls12_381", features = ["curve"] }
 ark-bn254 = { path = "../curves/bn254", version = "0.2.0", default-features = false, features = ["curve"] }
 ark-bw6-761 = { path = "../curves/bw6_761", version = "0.2.0" }
 
