--- a/curves/ed_on_bn254/Cargo.toml
+++ b/curves/ed_on_bn254/Cargo.toml
@@ -27,5 +27,6 @@ ark-curve-constraint-tests = { path = "../curve-constraint-tests", default-featu
 
 [features]
 default = []
+ed_on_bn254 = [ "ark-std/std", "ark-ff/std", "ark-ec/std", "ark-bn254/std" ]
 std = [ "ark-std/std", "ark-ff/std", "ark-ec/std", "ark-bn254/std" ]
 r1cs = ["ark-r1cs-std"]
